---
title: Entity Diagram for Technology Shopping Website - v0
---
erDiagram
    ACCOUNT {
        string username 
        string password
        string firstName
        string lastName
        string email
        string phoneNumber
        date dateOfBirth
        string accountStatus
        string accountCode 
    }

    CUSTOMER ||--|| ACCOUNT : "has"
    ADMIN ||--|| ACCOUNT : "has"

    CUSTOMER {
    }

    ADMIN {
    }

    PRODUCT {
        string productCode 
        string productName
        string description
        float discountPercentage
        string productStatus
        list imageURLs 
    }

    SPECIFICATION {
        string specCode
        Map specifications
        int stockQuantity
        decimal price
    }

    CATEGORY {
        string categoryCode
        string categoryName
    }

    BRAND {
        string brandCode 
        string brandName
    }

    TAG {
        string tagCode
        string tagName
    }

    ORDER {
        string orderCode 
        Enum processStatus
        Enum paymentStatus
        Enum paymentMethod
        decimal totalAmount
        float shippingCost
        float discountAmount
        string orderNote
        timestamp expectedReceiveTime
        timestamp receiveTime
        timestamp takeOrderTime
        timestamp payTime
    }

    ORDER_ITEM {
        int quantity
        decimal itemPrice 
    }

    CART {
    }

    CART_ITEM {
        int quantity
    }

    REVIEW {
        int rating 
        string comment
    }

    WISHLIST {
    }

    WISHLIST_ITEM {
    }

    SEEN_PRODUCT {
    }

    SEEN_PRODUCT_ITEM {
    }

    SHIPPING_ADDRESS {
        string city
        string district
        string ward
        string address
    }

    DISCOUNT{
        string discountCode
        string description
        float percentage
        timestamp startDate
        timestamp endDate
    }

    VOUCHER {
        string voucherCode
        string description
        float percentage
        decimal fixedAmount
        decimal maxValue
        int usageLimitPerCustomer
        int usageLimit
        timestamp startDate
        timestamp endDate
        Enum applyType
    }

    CUSTOMER_VOUCHER{
        int usageCount
    }

    CUSTOMER ||--|| WISHLIST : "has"
    WISHLIST ||--|{ WISHLIST_ITEM : "contains"
    
    CUSTOMER ||--|| CART : "has"
    CART ||--|{ CART_ITEM : "contains"
    
    CUSTOMER ||--|| SEEN_PRODUCT : "has"
    SEEN_PRODUCT ||--|{ SEEN_PRODUCT_ITEM : "contains"

    CUSTOMER ||--|{ CUSTOMER_VOUCHER : use
    VOUCHER ||--|{ CUSTOMER_VOUCHER : usedBy

    CUSTOMER ||--|{ SHIPPING_ADDRESS : "has"
    CUSTOMER ||--|{ ORDER : "places"
    CUSTOMER ||--|{ REVIEW : "writes"


    ORDER ||--|{ ORDER_ITEM : "contains"
    ORDER ||--|| SHIPPING_ADDRESS : "has"
    ORDER }|--|{ VOUCHER : "canApply"

    PRODUCT ||--o{ CART_ITEM : "addedTo"
    PRODUCT ||--o{ ORDER_ITEM : "includedIn"
    PRODUCT ||--o{ REVIEW : "receives"
    PRODUCT ||--o{ WISHLIST_ITEM : "addedTo"
    PRODUCT ||--o{ SEEN_PRODUCT_ITEM : "addedTo"
    PRODUCT ||--|| CATEGORY : "belongsTo"
    PRODUCT ||--|| BRAND : "manufacturedBy"
    PRODUCT ||--|{ TAG : "has"
    